trying to fix the overflow problems with hand

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10,3 +10,7 @@ Your custom styles go here
     border-radius: 15px;
     padding: 1em;
 }
+
+.toolbar-inner {
+    padding: 0;
+}
